@@ -20,6 +20,7 @@ import de.xwic.cube.IDimensionElement;
 
 /**
  * Created on Feb 11, 2009
+ * 
  * @author JBORNEMA
  */
 
@@ -27,24 +28,25 @@ public class CubeUtil {
 
 	protected IDataPool dataPool;
 	protected boolean autoCreateDimensionElement;
-	
+
 	protected Map<String, IDimensionElement> parsedDimensionElements = new HashMap<String, IDimensionElement>();
 
 	/**
 	 * Default constructor.
 	 */
 	public CubeUtil() {
-		
+
 	}
-	
+
 	/**
 	 * Use this dataPool.
+	 * 
 	 * @param dataPool
 	 */
 	public CubeUtil(IDataPool dataPool) {
 		setDataPool(dataPool);
 	}
-	
+
 	/**
 	 * @return the dataPool
 	 */
@@ -53,7 +55,8 @@ public class CubeUtil {
 	}
 
 	/**
-	 * @param dataPool the dataPool to set
+	 * @param dataPool
+	 *            the dataPool to set
 	 */
 	public void setDataPool(IDataPool dataPool) {
 		this.dataPool = dataPool;
@@ -67,28 +70,32 @@ public class CubeUtil {
 	}
 
 	/**
-	 * @param autoCreateDimensionElement the autoCreateDimensionElement to set
+	 * @param autoCreateDimensionElement
+	 *            the autoCreateDimensionElement to set
 	 */
 	public void setAutoCreateDimensionElement(boolean autoCreateDimensionElement) {
 		this.autoCreateDimensionElement = autoCreateDimensionElement;
 	}
-	
+
 	/**
-	 * Returns the DimensionElement specified in the id.
-	 * If autoCreateDimensionElement is true missing dimension elements are created.
-	 * This call caches parsed dimension elements in parsedDimensionElements.
-	 * The id is created from IDimensionElement.getId(). Sample:
-	 * <p>[GEO:EMEA/Germany]
+	 * Returns the DimensionElement specified in the id. If
+	 * autoCreateDimensionElement is true missing dimension elements are
+	 * created. This call caches parsed dimension elements in
+	 * parsedDimensionElements. The id is created from
+	 * IDimensionElement.getId(). Sample:
+	 * <p>
+	 * [GEO:EMEA/Germany]
+	 * 
 	 * @param id
 	 * @return
 	 */
 	public IDimensionElement parseDimensionElementId(String id) {
-		
+
 		IDimensionElement cached = parsedDimensionElements.get(id);
 		if (cached != null) {
 			return cached;
 		}
-		
+
 		/**
 		 * Copied from DataPool.parseDimensionElementId(String)
 		 */
@@ -108,7 +115,7 @@ public class CubeUtil {
 		if (idxDimSep == -1) { // no key given
 			throw new IllegalArgumentException("No dimension key found");
 		}
-		
+
 		String dimKey = part.substring(0, idxDimSep);
 		elmKeys = part.substring(idxDimSep + 1);
 		dimension = dataPool.getDimension(dimKey);
@@ -124,7 +131,8 @@ public class CubeUtil {
 				} else {
 					elmKey = elmKeys.substring(idxPathStart, idxPathSep);
 				}
-				if (!autoCreateDimensionElement || element.containsDimensionElement(elmKey)) {
+				if (!autoCreateDimensionElement
+						|| element.containsDimensionElement(elmKey)) {
 					element = element.getDimensionElement(elmKey);
 				} else {
 					// create element
@@ -135,12 +143,48 @@ public class CubeUtil {
 		}
 
 		/**
-		 * Copied end 
+		 * Copied end
 		 */
-		
+
 		parsedDimensionElements.put(id, element);
-		
+
 		return element;
-		
+
 	}
+
+	/**
+	 * Parse a dimension path.
+	 * @param path
+	 * @param dimension
+	 * @return
+	 */
+	public IDimensionElement parseDimensionPath(String path, IDimension dimension) {
+		if (path == null) {
+			return dimension;
+		}
+
+		IDimensionElement element = dimension;
+		int idxPathSep;
+		int idxPathStart = 0;
+		do {
+			idxPathSep = path.indexOf('/', idxPathStart);
+			String elmKey;
+			if (idxPathSep == -1) {
+				elmKey = path.substring(idxPathStart);
+			} else {
+				elmKey = path.substring(idxPathStart, idxPathSep);
+			}
+			if (!autoCreateDimensionElement
+					|| element.containsDimensionElement(elmKey)) {
+				element = element.getDimensionElement(elmKey);
+			} else {
+				// create element
+				element = element.createDimensionElement(elmKey);
+			}
+			idxPathStart = idxPathSep + 1;
+		} while (idxPathSep != -1);
+
+		return element;
+	}
+
 }
