@@ -1,6 +1,9 @@
 Change Notes
 ============
 
+2009-08-07 RPF
+	- Added parseDimensionPath to CubeUtil.
+	
 2009-08-03 FLI
 	- Added TempMeasure helper class.
 
